# gamedev-challenge

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: fragment.frag  vertex.vert
src/: Button.cpp  Button.h  CMakeLists.txt  ChallengeGame.cpp  ChallengeGame.h  GamePiece.cpp  GamePiece.h  Main.cpp
